force-app/main/default/objects/BankAccount__c/BankAccount__c.object-meta.xml
<CustomObject>
    <label>口座</label>
    <nameField>
        <label>口座番号</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>