force-app/main/default/objects/BankAccount__c/fields/BankAccountChangeConfirmDate__c.field-meta.xml
<CustomField>
    <fullName>BankAccountChangeConfirmDate__c</fullName>
    <label>(削除)銀行口座変更確認日</label>
    <type>Date</type>
</CustomField>