force-app/main/default/objects/BankAccount__c/fields/BankAccountChangeConfirmDateConfirmer__c.field-meta.xml
<CustomField>
    <fullName>BankAccountChangeConfirmDateConfirmer__c</fullName>
    <label>(削除)銀行口座変更確認日_確認者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>