force-app/main/default/objects/BankAccount__c/fields/BankAccountChangeContent__c.field-meta.xml
<CustomField>
    <fullName>BankAccountChangeContent__c</fullName>
    <label>(削除)銀行口座変更内容</label>
    <type>TextArea</type>
</CustomField>