force-app/main/default/objects/BankAccount__c/fields/BankAccountContractor__c.field-meta.xml
<CustomField>
    <fullName>BankAccountContractor__c</fullName>
    <label>（廃止）口座名義</label>
    <length>255</length>
    <type>Text</type>
</CustomField>