force-app/main/default/objects/BankAccount__c/fields/BankAccountId__c.field-meta.xml
<CustomField>
    <fullName>BankAccountId__c</fullName>
    <externalId>true</externalId>
    <label>口座ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>