force-app/main/default/objects/BankAccount__c/fields/BankAccountName__c.field-meta.xml
<CustomField>
    <fullName>BankAccountName__c</fullName>
    <label>口座名義</label>
    <length>255</length>
    <type>Text</type>
</CustomField>