force-app/main/default/objects/BankAccount__c/fields/BankInquiryDate__c.field-meta.xml
<CustomField>
    <fullName>BankInquiryDate__c</fullName>
    <label>(削除)銀行照会日</label>
    <type>Date</type>
</CustomField>