force-app/main/default/objects/BankAccount__c/fields/BankInquiryDateReceptionist__c.field-meta.xml
<CustomField>
    <fullName>BankInquiryDateReceptionist__c</fullName>
    <label>(削除)銀行照会日_受付者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>