force-app/main/default/objects/BankAccount__c/fields/BankKana__c.field-meta.xml
<CustomField>
    <fullName>BankKana__c</fullName>
    <label>銀行フリガナ</label>
    <length>15</length>
    <type>Text</type>
</CustomField>