force-app/main/default/objects/BankAccount__c/fields/BranchOfficeKana__c.field-meta.xml
<CustomField>
    <fullName>BranchOfficeKana__c</fullName>
    <label>支店フリガナ</label>
    <length>15</length>
    <type>Text</type>
</CustomField>