force-app/main/default/objects/BankAccount__c/fields/BranchOfficeName__c.field-meta.xml
<CustomField>
    <fullName>BranchOfficeName__c</fullName>
    <label>支店名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>