force-app/main/default/objects/BankAccount__c/fields/ContractorKana__c.field-meta.xml
<CustomField>
    <fullName>ContractorKana__c</fullName>
    <label>名義フリガナ</label>
    <length>30</length>
    <type>Text</type>
</CustomField>