force-app/main/default/objects/BankAccount__c/fields/CustomerCode2__c.field-meta.xml
<CustomField>
    <fullName>CustomerCode2__c</fullName>
    <label>顧客コード2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>