force-app/main/default/objects/BankAccount__c/fields/DepositType__c.field-meta.xml
<CustomField>
    <fullName>DepositType__c</fullName>
    <label>預金種目</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountType</valueSetName>
    </valueSet>
</CustomField>