force-app/main/default/objects/BankAccount__c/fields/DepositTypeForFbData__c.field-meta.xml
<CustomField>
    <fullName>DepositTypeForFbData__c</fullName>
    <formula>IF ( TEXT(DepositType__c) = &quot;普通預金&quot;, &quot;1&quot;, IF ( TEXT(DepositType__c)= &quot;当座預金&quot;, &quot;2&quot;, IF ( TEXT(DepositType__c)= &quot;貯蓄預金&quot;, &quot;4&quot;, &quot;1&quot;) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>預金種目(FBデータ用)</label>
    <type>Text</type>
</CustomField>