force-app/main/default/objects/BankAccount__c/fields/InquiryContent__c.field-meta.xml
<CustomField>
    <fullName>InquiryContent__c</fullName>
    <label>(削除)照会内容</label>
    <type>TextArea</type>
</CustomField>