force-app/main/default/objects/BankAccount__c/fields/InquiryContentCorrectionDateCorrector__c.field-meta.xml
<CustomField>
    <fullName>InquiryContentCorrectionDateCorrector__c</fullName>
    <label>(削除)照会内容修正日_修正者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>