force-app/main/default/objects/BankAccount__c/fields/IsOwnedBankAccount__c.field-meta.xml
<CustomField>
    <fullName>IsOwnedBankAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自社口座フラグ</label>
    <type>Checkbox</type>
</CustomField>