force-app/main/default/objects/BankAccount__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>BankCode__c</columns>
    <columns>BankName__c</columns>
    <columns>BranchOfficeCode__c</columns>
    <columns>BranchOfficeName__c</columns>
    <columns>DepositType__c</columns>
    <columns>BankAccountNum__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BankName__c</field>
        <operation>equals</operation>
    </filters>
    <label>すべて選択</label>
</ListView>